--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactNativeTravelApp",
+  "name": "react-native-travel-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
